@@ -12,7 +12,7 @@ my $requires = { 'perl'                    => q(5.008),
                  'parent'                  => q(0.221),
                  'version'                 => q(0.74),
                  'Class::Accessor::Fast'   => q(0.31),
-                 'Class::Inspector'        => q(1.18),
+                 'Class::MOP'              => q(0.84),
                  'HTML::Accessors'         => q(0.1.22),
                  'Syntax::Highlight::Perl' => q(1.00),
                  'Text::Markdown'          => q(1.0.20),
