@@ -1,5 +1,7 @@
 Revision history for HTML::FormWidgets
 
+         - Use Class::MOP in ensure_class_loaded
+
 0.5.184  13/06/2009
          - Added more tests
 
